<resources>
    <string name="app_name">Ayo</string>
    <string name="enter_your_email_address">Enter your email address:</string>
    <string name="type_email_here">Type email here</string>
    <string name="type_your_password">Type your password:</string>
    <string name="login">Login</string>
    <string name="your_profile">Your profile</string>
    <string name="your_name">Your name:</string>
    <string name="your_email">Your email:</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="your_picture">Your picture:</string>
    <string name="click_the_button_above_to_take_a_picture">Click the button above to take a picture</string>
</resources>